parser/tests/parser/expressions/invalid_contents/unterminated.mf2
{1 abc
=== spans ===
                    {1 abc
Pattern             ^^^^^^
LiteralExpression   ^^^^^^
Number               ^
Number.integral      ^
=== diagnostics ===
Placeholder is missing a closing brace (at @0..6)
  {1 abc
  ^^^^^^
Unrecognized placeholder contents (at @3..6)
  {1 abc
     ^^^
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..6,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}